# datum-network-channel-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  IceDockerfile  MANIFEST.in  README.md  build.sh  clean.sh  docker-compose.yml  function.sh  install_docker.sh  p0.env  p1.env  setup.py
cmake/: SetCommon.cmake
code/: CMakeLists.txt  io_channel.cc
code/include/: IChannel.h  common.h  config.h  connection.h  io_channel.pb.h  io_channel_impl.h  net_io.h
code/protos/: io_channel.grpc.pb.cc  io_channel.grpc.pb.h  io_channel.pb.cc  io_channel.pb.h
code/src/: config.cc  connection.cc  io_channel.cc  io_channel_async_server.cc  io_channel_impl.cc  io_channel_server.cc  net_io.cc
config/: config.json  config_ice.json  gmssl_config.json  one_to_one.json  openssl_config.json
core/include/: IChannel.h  IoChannelI.h  WorkQueue.h  async_client.h  async_server.h  base_client.h  base_server.h  client_connection.h  common.h  config.h  connection.h  const.h  cycle_buffer.h  event_exception.h  grpc_channel.h  io_channel.grpc.pb.h  io_channel.pb.h  io_channel_ice.h  io_channel_impl.h  io_channel_server.h  net_io.h  server_connection.h  simple_buffer.h  simple_timer.h  sync_client.h  sync_server.h  tcp_channel.h  via.grpc.pb.h  via.pb.h
core/pybind11/: api_manager.h  io_channel.cc
core/src/: IoChannelI.cc  WorkQueue.cc  async_client.cc  async_server.cc  base_client.cc  base_server.cc  client_connection.cc  config.cc  connection.cc  cycle_buffer.cc  grpc_channel.cc  io_channel.cc  io_channel.grpc.pb.cc  io_channel.pb.cc  io_channel_ice.cpp  io_channel_impl.cc  io_channel_server.cc  net_io.cc  server_connection.cc  simple_timer.cc  sync_client.cc  sync_server.cc  tcp_channel.cc  via.grpc.pb.cc  via.pb.cc
demo/c++/multi_to_multi/: p1_cs.cc
demo/c++/one_to_one/: server.cc
demo/multi_to_multi/: p0_cs.cc  p1_cs.cc  p2_cs.cc  p9_cs.cc  readme.md
demo/one_to_multi/: p0_server.cc  p1_client.cc  p2_client.cc  p9_client.cc  readme.md
demo/one_to_one/: first_client.cc  p0_server.cc  p1_client.cc  server.cc
demo/python/one_to_one/: client.py  server.py
ice/: io_channel_ice.ice
openssl/: generate.sh  readme.md  server_cert.conf
protos/: io_channel.proto  via.proto
python/io_channel/: __init__.py
ssl/: readme.md
ssl/gmssl/: gen_certs_gmssl.sh  openssl.cnf
ssl/openssl/: readme.md
test/c++/big_data/: p0_server.cc  p1_client.cc  p2_client.cc  readme.md
test/c++/multi_to_multi/: p0_cs.cc  p1_cs.cc  p2_cs.cc  p9_cs.cc
test/c++/one_to_multi/: p0_server.cc  p1_client.cc  p2_client.cc  p9_client.cc
test/c++/one_to_one/: CMakeLists.txt  config.json  first_client.cc  p0_server.cc  p1_client.cc  readme.md
test/c++/performance_test/: CMakeLists.txt  common.h  config.json  p0_cs.cc  p1_cs.cc  p2_cs.cc  readme.md
test/c++/performance_test/data_file/: 102400_bytes.txt  10240_bytes.txt  1024_bytes.txt  512_bytes.txt
test/c++/performance_test/script/: killall.sh  time_wait.sh
test/c++/via_test/: CMakeLists.txt  client.cc  config.json  readme.md  server.cc
test/c++/via_test/script/: killall.sh  run_test.sh
test/python/: readme.md
test/python/docker/: client.py  client_via.py  one_to_one.json  one_to_one_via.json  p0_client_config.json  p1_server_config.json  server.py  server_via.py
test/python/docker/config/: config.glacier2  config.gridregistry  config.ssl.glacier2
test/python/io_via_rosetta/: rtt-linear_regression_reveal.py  rtt-logistic_regression_reveal.py  rtt-matmul.py
test/python/linear_saver_restore/: config.json  config_ice.json  internal_CONFIG.json  rtt-linear_regression_restore.py  rtt-linear_regression_saver.py  rtt-logistic_regression_reveal_ice.py  run_ice.sh  run_restore.sh  run_saver.sh
test/python/multi_to_multi/: readme.md
test/python/one_to_multi/: readme.md
test/python/one_to_one/: client.py  client_via.py  one_to_one.json  one_to_one_via.json  server.py  server_via.py
test/python/psi_demo/: config.json  gen_fake_data  kill.sh  psi_demo_extio.py  run_demo_extio.sh
test/python/via_alignment/: client.py  readme.md  server.py
